# interactive_viz

./: README.md  pyproject.toml
data/: data.ipynb
data/clean_data/: national.csv  state.csv
data/raw_data/: Income inequality (Gini Coefficient).csv  POPTOTUSA647NWDB.csv  Unemployment rate by Total.csv  cpi.csv  snap-annualsummary-9.xlsx  snap.py  state_pop.xlsx  state_snap.csv
docs/: CNAME  bar.js  events.js  index.html  map.js  style.css
docs/clean_data/: events.csv  state.csv  state_geometries.geojson
milestones/: citations.md  interactive-draft.md  interactive-proposal.md
scratch/: data.ipynb  snap.html  style.css
src/: data.ipynb  index.html  map.js
